--- a/site/app/views/domains/_form.html.haml
+++ b/site/app/views/domains/_form.html.haml
@@ -1,13 +1,13 @@
 #new_domain
   = semantic_form_for domain, :url => domain_path, :simple => true, :html => {:class => 'form-inline'} do |f|
     = f.semantic_errors
-    .control-group.control-group-important{:class => domain.errors[:namespace].present? ? 'error' : '', :id => "domain_name_group"}
+    .control-group.control-group-important{:class => domain.errors[:name].present? ? 'error' : '', :id => "domain_name_group"}
       .controls
         .input-prepend-append
           %span.add-on-first> http://applicationname&ndash;
           = f.text_field :name, :autofocus => true, :placeholder => 'Namespace', :class => 'domain_name'
           %span.add-on-last> .rhcloud.com
-          = f.inline_errors_for :namespace
+          = f.inline_errors_for :name
         .row.control-group.error
           #app-errors.span
         .help-block Your namespace must be letters or numbers with no spaces or symbols.
