--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -1,3 +1,11 @@
+.community .column-nav .gutter-right {
+  margin-top: 28px;
+}
+.community .messaging {
+  margin-top: 30px;
+  margin-bottom: 45px;
+}
+
 /* Drupal specific markup, we may want to wrap this with a top level selector on body.drupal or something */
 .views-field-rss { float: right; }
 .views-field-title { font-size: 16px; line-height: 20px; }
