Attached images list removed from Community Wiki using CSS display none

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -141,6 +141,10 @@
   display: none;
 }
 
+.all-attached-images {
+  display: none;
+}
+
 /* Voting on Ideas */
 td.views-field-vud-node-widget {
   width: 55px;
