--- a/site/app/stylesheets/common.scss
+++ b/site/app/stylesheets/common.scss
@@ -18,6 +18,7 @@
 // Core variables and mixins
 @import "bootstrap/variables"; // Modify this for custom colors, font-sizes, etc
 @import "bootstrap/mixins";
+@import "mixins";
 
 // CSS Reset
 @import "bootstrap/reset";
