--- a/site/app/views/opensource/download.html.haml
+++ b/site/app/views/opensource/download.html.haml
@@ -4,117 +4,105 @@
 - content_for :page_title, 'Under the Hood'
 
 %h1.ribbon Under the Hood
+%p OpenShift is made of many different Open Source software components working in harmony to power your apps.  The list below describes each component and links to the public GitHub repository.
 
-%section
-  %p.larger
-    OpenShift is made of many different Open Source software components working in harmony to power your apps.  We provide a helpful list of them below.
+%section.row
+  .span6
+    %dl.larger
+      %dt.headline= link_to "Crank Case", "#{openshift_github_url}/crank_case", :class => "external", :target => "_blank"
+      %dd User Management Component
+      %dt.headline= link_to "Gear Changer", "#{openshift_github_url}/gear_changer", :class => "external", :target => "_blank"
+      %dd Short description to come
+      %dt.headline= link_to "RHC", "#{openshift_github_url}/os-client-tools", :class => "external", :target => "_blank"
+      %dd Command-line client tools
+      %dt.headline= link_to "StickShift", "#{openshift_github_url}/openshift/stickshift", :class => "external", :target => "_blank"
+      %dd Provides API
+      %dt.headline= link_to "SwingShift", "#{openshift_github_url}/swingshift", :class => "external", :target => "_blank"
+      %dd Provides user authentication
+      %dt.headline= link_to "Uplift", "#{openshift_github_url}/uplift", :class => "external", :target => "_blank"
+      %dd DNS Management component
 
-  .row
-    .span6
-      %ul.unstyled
-        %li
-          %h3
-            = link_to "Crank Case", "#{@openshift_github_path}/crank_case", :class => "external", :target => "_blank"
-            .link_desc User Management Component
-        %li
-          %h3
-            = link_to "Gear Changer", "#{@openshift_github_path}/gear_changer", :class => "external", :target => "_blank"
-            .link_desc Short description to come
-        %li
-          %h3
-            = link_to "RHC", "#{@openshift_github_path}/os-client-tools", :class => "external", :target => "_blank"
-            .link_desc Command-line client tools
-        %li
-          %h3
-            = link_to "StickShift", "#{@openshift_github_path}/openshift/stickshift", :class => "external", :target => "_blank"
-            .link_desc Provides API
-        %li
-          %h3
-            = link_to "SwingShift", "#{@openshift_github_path}/swingshift", :class => "external", :target => "_blank"
-            .link_desc Provides user authentication
-        %li
-          %h3
-            = link_to "Uplift", "#{@openshift_github_path}/uplift", :class => "external", :target => "_blank"
-            .link_desc DNS Management component
+      %p
+        %em Coming soon &mdash; the OpenShift web console
 
-    .span5.info-ribbon
-      %h2 Test Drive
-      %p.larger
-        Get all the components preconfigured in a bootable disk image.
-      - if logged_in?
-        - download = Download.find('remix')
-        = take_action download_path(download), download.name
-      - else
-        = take_action download_index_path, "Start Download"
+  .span5.info-ribbon
+    %h2 Test Drive
+    %p.larger
+      Get all the components preconfigured in a bootable disk image.
+    - if logged_in?
+      - download = Download.find('remix')
+      = take_action download_path(download), download.name
+    - else
+      = take_action download_index_path, "Start Download"
+    %p
+      Once you got it, you can
+      = link_to "run it as a virtual guest", "#"
+      ,
+      = link_to "boot it from a LiveCD", "#"
+      , or
+      = link_to "boot it from a USB stick", "#"
+    %p
+      Then, we suggest you read the
+      = link_to "live image documentation", "#"
+      for instructions on what to do after you boot.
+    .well
+      %h4 Important Information
       %p
-        Once you got it, you can
-        = link_to "run it as a virtual guest", "#"
-        ,
-        = link_to "boot it from a LiveCD", "#"
-        , or
-        = link_to "boot it from a USB stick", "#"
-      %p
-        Then, we suggest you read the
-        = link_to "live image documentation", "#"
-        for instructions on what to do after you boot.
-      .well
-        %h3 Important Information
-        %p
-          This image contains software from Fedora 16.  Corresponding source packages for such software are available at
-          = link_to "http://koji.fedoraproject.org/koji", "http://koji.fedoraproject.org/koji"
-  .row
-    .span12
-      %h3 Cartridges
-      %p
-        Cartridges provide various middleware components and add functionality to other cartridges.
-  .row
-    .span4
-      %strong Web Frameworks
-      %ul
-        %li
-          = link_to "JBossAS Cartridge", "#{@openshift_github_path}/jboss_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Node.js Cartridge", "#{@openshift_github_path}/node_js_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "PHP Cartridge", "#{@openshift_github_path}/php_cartidge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Perl Cartridge", "#{@openshift_github_path}/perl_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Python Cartridge", "#{@openshift_github_path}/python_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Ruby Cartridge", "#{@openshift_github_path}/ruby_cartridge", :class => "external", :target => "_blank"
-    .span4
-      %strong Database and Related
-      %ul
-        %li
-          = link_to "10Gen MMS Cartridge", "#{@openshift_github_path}/10gen_mms_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "MondgoDB Cartridge", "#{@openshift_github_path}/mondgodb_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "MySQL Cartridge", "#{@openshift_github_path}/mysql_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "PHPMyAdmin Cartridge", "#{@openshift_github_path}/phpmyadmin_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "PostgreSQL Cartridge", "#{@openshift_github_path}/postgresql_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Rockmongo Cartridge", "#{@openshift_github_path}/rockmongo_cartridge", :class => "external", :target => "_blank"
-    .span4
-      %strong Other Cartridges
-      %ul
-        %li
-          = link_to "Cron Cartridge", "#{@openshift_github_path}/cron_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Jenkins Server Cartridge", "#{@openshift_github_path}/jenkins_server_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Jenkins Client Cartridge", "#{@openshift_github_path}/jenkins_client_cartridge", :class => "external", :target => "_blank"
-        %li
-          = link_to "Metrics Cartridge", "#{@openshift_github_path}/metrics_cartridge", :class => "external", :target => "_blank"
-  .row
-    .span11.well
-      %h3 Important Information
-      %p
-        These are some of the projects that are used to create Red Hat's OpenShift Platform-as-a-Service (PaaS), but are not necessarily the versions of code currently used for OpenShift. Red Hat and OpenShift are trademarks of Red Hat, Inc., registered in the United States and other countries. Red Hat's offering of the code for your downloading, use, modification, or distribution is not a grant of a trademark license to OpenShift or any other Red Hat trademark.
-      %p
-        The components listed above are under the
-        = link_to "Apache Software License 2.0", "http://www.apache.org/licenses/LICENSE-2.0.html", :class => "external", :target => "_blank"
-        , except with cartridges listed with a specific license.  See project pages for full text of each project's license.
+        This image contains software from Fedora 16.  Corresponding source packages for such software are available at
+        = link_to "http://koji.fedoraproject.org/koji", "http://koji.fedoraproject.org/koji"
+
+%section.row
+  .span12
+    %h3 Cartridges
+    %p
+      Cartridges enable new capabilities for applications by adding middleware components or enhancing other cartridges.
+
+  .span4.link-column
+    %h5 Web Frameworks
+    %ul.unstyled
+      %li
+        = link_to "JBossAS Cartridge", "#{openshift_github_url}/jboss_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Node.js Cartridge", "#{openshift_github_url}/node_js_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "PHP Cartridge", "#{openshift_github_url}/php_cartidge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Perl Cartridge", "#{openshift_github_url}/perl_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Python Cartridge", "#{openshift_github_url}/python_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Ruby Cartridge", "#{openshift_github_url}/ruby_cartridge", :class => "external", :target => "_blank"
+  .span4.link-column
+    %h5 Database and Related
+    %ul.unstyled
+      %li
+        = link_to "10Gen MMS Cartridge", "#{openshift_github_url}/10gen_mms_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "MondgoDB Cartridge", "#{openshift_github_url}/mondgodb_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "MySQL Cartridge", "#{openshift_github_url}/mysql_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "PHPMyAdmin Cartridge", "#{openshift_github_url}/phpmyadmin_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "PostgreSQL Cartridge", "#{openshift_github_url}/postgresql_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Rockmongo Cartridge", "#{openshift_github_url}/rockmongo_cartridge", :class => "external", :target => "_blank"
+  .span4.link-column
+    %h5 Other Cartridges
+    %ul.unstyled
+      %li
+        = link_to "Cron Cartridge", "#{openshift_github_url}/cron_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Jenkins Server Cartridge", "#{openshift_github_url}/jenkins_server_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Jenkins Client Cartridge", "#{openshift_github_url}/jenkins_client_cartridge", :class => "external", :target => "_blank"
+      %li
+        = link_to "Metrics Cartridge", "#{openshift_github_url}/metrics_cartridge", :class => "external", :target => "_blank"
+%section.well
+  %h2 Important Information
+  %p
+    These are some of the projects that are used to create Red Hat's OpenShift Platform-as-a-Service (PaaS), but are not necessarily the versions of code currently used for OpenShift. Red Hat and OpenShift are trademarks of Red Hat, Inc., registered in the United States and other countries. Red Hat's offering of the code for your downloading, use, modification, or distribution is not a grant of a trademark license to OpenShift or any other Red Hat trademark.
+  %p
+    The components listed above are under the
+    = link_to "Apache Software License 2.0", "http://www.apache.org/licenses/LICENSE-2.0.html", :class => "external", :target => "_blank"
+    , except with cartridges listed with a specific license.  See project pages for full text of each project's license.
