--- a/site/app/views/opensource/download.html.haml
+++ b/site/app/views/opensource/download.html.haml
@@ -9,13 +9,13 @@
 %section.row
   .span6
     %dl.larger
-      %dt.headline= link_to "Crank Case", "#{openshift_github_url}/crank_case", :class => "external", :target => "_blank"
+      %dt.headline= link_to "Crank Case", "#{openshift_github_url}/crankcase", :class => "external", :target => "_blank"
       %dd User Management Component
-      %dt.headline= link_to "Gear Changer", "#{openshift_github_url}/gear_changer", :class => "external", :target => "_blank"
+      %dt.headline= link_to "Gear Changer", "#{openshift_github_url}/gearchanger", :class => "external", :target => "_blank"
       %dd Short description to come
       %dt.headline= link_to "RHC", "#{openshift_github_url}/os-client-tools", :class => "external", :target => "_blank"
       %dd Command-line client tools
-      %dt.headline= link_to "StickShift", "#{openshift_github_url}/openshift/stickshift", :class => "external", :target => "_blank"
+      %dt.headline= link_to "StickShift", "#{openshift_github_url}//stickshift", :class => "external", :target => "_blank"
       %dd Provides API
       %dt.headline= link_to "SwingShift", "#{openshift_github_url}/swingshift", :class => "external", :target => "_blank"
       %dd Provides user authentication
@@ -61,43 +61,43 @@
     %h5 Web Frameworks
     %ul.unstyled
       %li
-        = link_to "JBossAS Cartridge", "#{openshift_github_url}/jboss_cartridge", :class => "external", :target => "_blank"
+        = link_to "JBossAS Cartridge", "#{openshift_cartridges_github_url}/jboss_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "Node.js Cartridge", "#{openshift_github_url}/node_js_cartridge", :class => "external", :target => "_blank"
+        = link_to "Node.js Cartridge", "#{openshift_cartridges_github_url}/node_js_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "PHP Cartridge", "#{openshift_github_url}/php_cartidge", :class => "external", :target => "_blank"
+        = link_to "PHP Cartridge", "#{openshift_cartridges_github_url}/php_cartidge", :class => "external", :target => "_blank"
       %li
-        = link_to "Perl Cartridge", "#{openshift_github_url}/perl_cartridge", :class => "external", :target => "_blank"
+        = link_to "Perl Cartridge", "#{openshift_cartridges_github_url}/perl_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "Python Cartridge", "#{openshift_github_url}/python_cartridge", :class => "external", :target => "_blank"
+        = link_to "Python Cartridge", "#{openshift_cartridges_github_url}/python_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "Ruby Cartridge", "#{openshift_github_url}/ruby_cartridge", :class => "external", :target => "_blank"
+        = link_to "Ruby Cartridge", "#{openshift_cartridges_github_url}/ruby_cartridge", :class => "external", :target => "_blank"
   .span4.link-column
     %h5 Database and Related
     %ul.unstyled
       %li
-        = link_to "10Gen MMS Cartridge", "#{openshift_github_url}/10gen_mms_cartridge", :class => "external", :target => "_blank"
+        = link_to "10Gen MMS Cartridge", "#{openshift_cartridges_github_url}/10gen_mms_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "MondgoDB Cartridge", "#{openshift_github_url}/mondgodb_cartridge", :class => "external", :target => "_blank"
+        = link_to "MondgoDB Cartridge", "#{openshift_cartridges_github_url}/mondgodb_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "MySQL Cartridge", "#{openshift_github_url}/mysql_cartridge", :class => "external", :target => "_blank"
+        = link_to "MySQL Cartridge", "#{openshift_cartridges_github_url}/mysql_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "PHPMyAdmin Cartridge", "#{openshift_github_url}/phpmyadmin_cartridge", :class => "external", :target => "_blank"
+        = link_to "PHPMyAdmin Cartridge", "#{openshift_cartridges_github_url}/phpmyadmin_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "PostgreSQL Cartridge", "#{openshift_github_url}/postgresql_cartridge", :class => "external", :target => "_blank"
+        = link_to "PostgreSQL Cartridge", "#{openshift_cartridges_github_url}/postgresql_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "Rockmongo Cartridge", "#{openshift_github_url}/rockmongo_cartridge", :class => "external", :target => "_blank"
+        = link_to "Rockmongo Cartridge", "#{openshift_cartridges_github_url}/rockmongo_cartridge", :class => "external", :target => "_blank"
   .span4.link-column
     %h5 Other Cartridges
     %ul.unstyled
       %li
-        = link_to "Cron Cartridge", "#{openshift_github_url}/cron_cartridge", :class => "external", :target => "_blank"
+        = link_to "Cron Cartridge", "#{openshift_cartridges_github_url}/cron_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "Jenkins Server Cartridge", "#{openshift_github_url}/jenkins_server_cartridge", :class => "external", :target => "_blank"
+        = link_to "Jenkins Server Cartridge", "#{openshift_cartridges_github_url}/jenkins_server_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "Jenkins Client Cartridge", "#{openshift_github_url}/jenkins_client_cartridge", :class => "external", :target => "_blank"
+        = link_to "Jenkins Client Cartridge", "#{openshift_cartridges_github_url}/jenkins_client_cartridge", :class => "external", :target => "_blank"
       %li
-        = link_to "Metrics Cartridge", "#{openshift_github_url}/metrics_cartridge", :class => "external", :target => "_blank"
+        = link_to "Metrics Cartridge", "#{openshift_cartridges_github_url}/metrics_cartridge", :class => "external", :target => "_blank"
 %section.well
   %h2 Important Information
   %p
