--- a/site/app/views/application_types/show.html.haml
+++ b/site/app/views/application_types/show.html.haml
@@ -51,8 +51,8 @@
                 Because this is your first application, you need to set a name under which your applications will be grouped
     - if @gear_sizes and @gear_sizes.length > 1
       .control-group
-        %label{:for => :gear_size_profile, :class => "control-label"} Gear Size
-        = f.input :gear_size_profile, :collection => options_for_select(@gear_sizes, @gear_sizes[0]), :include_blank => false, :class => @application.errors[:node_profile].present? ? 'error' : '', :label => false
+        %label{:for => :gear_profile, :class => "control-label"} Gear Size
+        = f.input :gear_profile, :collection => options_for_select(@gear_sizes, @gear_sizes[0]), :include_blank => false, :class => @application.errors[:node_profile].present? ? 'error' : '', :label => false
         .row
           .controls
             .help-block.span6
