--- a/site/public/stylesheets/bootstrap.css
+++ b/site/public/stylesheets/bootstrap.css
@@ -129,7 +129,7 @@ textarea {
 
 body {
   margin: 0;
-  font-family: "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, "Liberation Sans", Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
   color: #333333;
@@ -295,7 +295,6 @@ a:hover {
 
 p {
   margin: 0 0 9px;
-  font-family: "Liberation Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   line-height: 18px; }
   p small {
@@ -1982,7 +1981,8 @@ input[type="submit"].btn {
   border-radius: 4px;
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1); }
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
 
 .btn-navbar {
   display: none;
@@ -3350,6 +3350,7 @@ input:focus, textarea:focus {
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
   cursor: pointer;
   vertical-align: middle;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
   *margin-left: .3em; }
 
 .btn:first-child {
@@ -3570,7 +3571,8 @@ input:focus, textarea:focus {
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#323232', endColorstr='#191919', GradientType=0);
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
-  border-radius: 0; }
+  border-radius: 0;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
 
 .navbar .nav {
   position: relative;
@@ -3676,7 +3678,8 @@ input:focus, textarea:focus {
   background-repeat: repeat-x;
   -webkit-box-shadow: 0 2px 12px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 2px 12px rgba(0, 0, 0, 0.5);
-  box-shadow: 0 1px 2px #aaa; }
+  box-shadow: 0 1px 2px #aaa;
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled = false); }
 
 .postit .tape {
   position: absolute;
