--- a/site/app/views/layouts/site.html.haml
+++ b/site/app/views/layouts/site.html.haml
@@ -8,7 +8,7 @@
     = render "layouts/head"
     = render "layouts/site/stylesheets"
 
-  %body{ :class => "#{controller.controller_name} #{controller.action_name} #{yield :body_class}" }
+  %body{ :class => "#{controller.controller_name} #{controller.action_name}" }
 
     = outage_notification
 
