--- a/site/app/views/product/index.html.haml
+++ b/site/app/views/product/index.html.haml
@@ -1,105 +1,230 @@
-- content_for :body_class, 'home'
-- content_for :nav_class, 'section-nav'
-- content_for :header do
-  .messaging.messaging-home
-    .container
-      %h1.primary.headline
-        Develop and Scale 
-        %strong#technology-rotate Apps
-        in the Cloud
-      %h2.secondary 
-        OpenShift is Red Hat's free, auto-scaling Platform as a Service (PaaS) for 
-        applications.  As an application platform in the cloud, OpenShift manages 
-        the stack so you can focus on your code.
+#pageheader.express.container_24
+  #title.grid_14
+    %h2 Express
+    %h4#subtitle Free and Easy Cloud Deployments
 
-- content_for :javascripts do
-  = javascript_include_tag "twitter.branding.js"
-  = javascript_include_tag "home.branding.js"
+  #title_accent.grid_10
+      
+  .clear
 
-- content_for :sub_layout do
-
-  #learn.section-striped.lift-counter
-    .container.container-inset
-      .row
-        = take_action new_account_path, 'Get started in the cloud for <strong>free</strong>', 'Try it now', :class => 'span12'
+#page.container_24
   
-        .span6
-          %ul.learn.unstyled
-            %li.scale
-              = link_to product_overview_path(:anchor => 'scale'), :class => 'link-tile' do
-                %img{:src => image_path('/app/images/scale.png')}
-                %h4 Java, Ruby, Node.js, Python, PHP, or Perl
-                %p Code in your favorite language, framework, and middleware.  Grow your applications easily with resource scaling.
-            %li.time
-              = link_to product_overview_path(:anchor => 'code'), :class => 'link-tile' do
-                %img{:src => image_path('/app/images/time.png')}
-                %h4 Super Fast!
-                %p Code and deploy to the cloud in minutes.  Faster and easier than it has ever been.
-            %li.locked
-              = link_to product_overview_path(:anchor => 'open'), :class => 'link-tile' do
-                %img{:src => image_path('/app/images/lock.png')}
-                %h4 No Lock-In
-                %p Built on open technologies so you can take it with you.
-        .span6
-          %ul.news.unstyled
-            %li
-              = link_to openshift_blog_url, :class => 'link-tile' do
-                %h4 Want to keep up to date?
-                %p Keep up to date with the latest news and announcements from the OpenShift team. Our team is constantly bringing you the latest advice and tutorials.
-            %li
-              = link_to console_path, :class => 'link-tile' do
-                %h4 Try out the new console
-                %p The new console is out of preview and ready to help you build your apps in the cloud. We'll be adding lots more features to the console, so check back frequently!
-            %li
-              = link_to events_url, :class => 'link-tile' do
-                %h4 Meet the OpenShift team
-                %p We're in your area - check out the event list and join us!
+  / Main page content
+  #main_content.grid_17
+  
+    /About the product
+    #product_information.grid_8
+      %h2 What is Express?
+      %p
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. 
+      
+    #product_screenshot.grid_8
+      %img(src="http://placekitten.com/g/300/250"
+           title="Replace with actual screenshot"
+           alt="Screenshot")
+    
+    .clear
+        
+    / Product instructions
+    #product_tabs.grid_16
+      %ul#tab_navigation
+        %li
+          %a(href="#step_1") Step 1
+        %li
+          %a(href="#step_2") Step 2
+        %li
+          %a(href="#step_3") Step 3
+      
+      #step_1.tab
+        %h3 Step One Title
+        
+        .tab_illustration
+          %img(src="http://placekitten.com/g/300/200"
+               title="Replace with illustration of some sort"
+               alt="Step one illustration")
+        
+        %h4 First do this
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        
+        %h4 Then do this
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 
-      .row
-        .span6
-          %p.gutter= link_to "Learn about OpenShift", product_overview_path, :class => 'action-more'
-        .span6
-          %p.gutter= link_to "Read the OpenShift blog", openshift_blog_url, :class => 'action-more'
-  
-  #buzz.section-base
-    .container
-      .row.row-buzz.lift
-        .span12
-          .column-buzz
-            %h2 
-              Check the 
-              %strong Buzz
-            %hr
-            .row-fluid
-              -#.span6 #disabled for now
-                %blockquote
-                  %p OpenShift has dramatically improved my cloud experience. Managing my application is so much easier, I haven't had any problems dealing with usage spikes, and its security and scalability really help my peace of mind.
-                  %small Some person
-                %blockquote 
-                  %p OpenShift has dramatically improved my cloud experience. Managing my application is so much easier, I haven't had any problems dealing with usage spikes, and its security and scalability really help my peace of mind.
-                  %small Some other person
-              -# move to server side
-              #buzz-twitter-2.span5
-              .span1 &nbsp;
-              #buzz-twitter.span6
-  
-            .row-fluid
-              .span6
-                = link_to community_url, :class => 'link-with-action' do
-                  %strong Join
-                  our community
-              .span6
-                .align-right
-                  = link_to openshift_twitter_url, :class => 'link-with-action' do
-                    %strong Follow
-                    OpenShift
-                .align-right
-                  = link_to openshift_twitter_hashtag_url, :class => 'link-with-action' do
-                    %strong More
-                    = "#OpenShift buzz"
-  
-            -#.callout disabled for this sprint, will eventually pull latest events
-              .one Look for team
-              .two OpenShift
-              .three at Mongo DB
+      #step_2.tab
+        %h3 Step Two Title
 
+        .tab_illustration
+          %img(src="http://placekitten.com/g/300/200"
+               title="Replace with illustration of some sort"
+               alt="Step two illustration")
+
+        %h4 First do this
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        
+        %h4 Then do this
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+
+      #step_3.tab
+        %h3 Step Three Title
+
+        .tab_illustration
+          %img(src="http://placekitten.com/g/300/200"
+               title="Replace with illustration of some sort"
+               alt="Step three illustration")
+
+        %h4 First do this
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        
+        %h4 Then do this
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    
+        
+    / Videos
+    #product_videos.grid_8
+      %h2 Videos
+      
+      .product-video 
+        %h3 Video Title
+        %p.video-author
+          Author, Author description
+        
+        .video-thumb
+          %a(href="#")
+            %img(src="http://placekitten.com/g/150/100"
+                 title="Replace with actual video thumbnail"
+                 alt="Video title")
+      
+        %p.video-description
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        
+        .video-meta
+          %p.video-length
+            3 min, 27 seconds
+          %p.video-postdate
+            Posted May 5, 2011
+    
+      .product-video 
+        %h3 Video Title
+        %p.video-author.author
+          Author, Author description
+        
+        .video-thumb.thumb
+          %a(href="#")
+            %img(src="http://placekitten.com/g/150/100"
+                 title="Replace with actual video thumbnail"
+                 alt="Video title")
+      
+        %p.video-description
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        
+        .video-meta.meta
+          %p.video-length
+            3 min, 27 seconds
+          %p.video-date.date
+            Posted May 5, 2011
+            
+      %a.more(href="#") More documentation &gt;
+
+    / Featured community content
+    #product_community.grid_8
+      %h2 Community Highlights
+
+      .post
+        %h3 Post title
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        
+        .post-meta.meta
+          %p.post-author.author
+            Posted by Author
+          %p.post-date.date
+            Posted on June 8, 2011 13:21
+            
+        %a.more(href="#") Read more &gt;
+      
+      .post
+        %h3 Post title
+        %p
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diamvoluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+        
+        .post-meta.meta
+          %p.post-author.author
+            Posted by Author
+          %p.post-date.date
+            Posted on June 8, 2011 13:21
+            
+        %a.more(href="#") Read more &gt;
+      
+    .clear
+      
+  
+  / Sidebar
+  #supplemental_content.grid_6
+    
+    /Try it button
+    %a.try_it(href="#") Try it now!
+    
+    /Resource links
+    #resources
+      %h3 Resources
+      %ul
+        %li
+          %a(href="#") Quickstart Guide
+        
+        %li
+          %a(href="#") Frequently-Asked Questions
+        
+        %li
+          %a(href="#") API Documentation
+        
+      
+      %a.more(href="#") More documentation &gt;
+      
+    /Tour box
+    #tour
+      %a(href="#")
+        %h3 Take the Tour!
+        %p 
+          Check it out and see how cool it is!
+    
+    /Platforms
+    #platforms
+      %h3 Supported Platforms
+      %h4 Clouds
+      %ul
+        %li Amazon EC2
+        %li Rackspace Cloud
+    
+      %h4 Languages
+      %ul
+        %li PHP
+        %li Ruby
+    
+    /Top video
+    #top_video
+      %h3 Today's Top Video
+      #top_video_thumb
+        %img(src="http://placekitten.com/g/150/100"
+             title="Replace with actual video thumbnail"
+             alt="Today's top video")
+      %h4 Video Title
+      %p.video-author.author
+      %p.video-description
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumyeirmod tempor invidunt ut.
+      
+      %a.more(href="#") Read more &gt;
+          
+    /Promos
+    
+    .sidebar-promo
+      %h3 Promo title
+      %p
+        This is an example promo.
+
+  .clear
+  
