--- a/site/app/views/console/help.html.haml
+++ b/site/app/views/console/help.html.haml
@@ -61,8 +61,8 @@
       %strong Hit a bump in the road?
     %p Our #{link_to 'community forums', forums_url} are watched round the clock by an army of developers, evangelists, and OpenShift devotees.
     %form.form-search{:method => 'get', :action => community_search_url}
-      %input.input-medium.search-query{:name => 'keys', :placeholder => 'Search the forums'}
-      -#%input.btn{:type => 'submit', :value => 'Search'}
+      %input.span3.search-query{:name => 'keys', :placeholder => 'Search the forums'}
+      %button.search{:type => 'submit', :value => 'Search'}
     %p Check out the #{link_to 'Knowledge Base', knowledge_base_url} for known headaches and #{link_to 'FAQ', faq_url} for more general questions
     %p Talk directly to the team on IRC - #{link_to 'freenode.net on channel #openshift', irc_web_url}.
 
