--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -115,6 +115,7 @@ body.signup {
     padding-bottom: 30px;
   }
 }
+.simple .section-nav { padding-bottom: 0; }
 
 .section-striped {
   background: -moz-repeating-linear-gradient(-70deg, $lightStripesColor, $lightStripesColor 6px, $lightStripesAltColor 9px, $lightStripesAltColor 15px, $lightStripesColor 18px) repeat scroll 0 0 $lightStripesBackground;
