--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -716,6 +716,27 @@ body > header {
     repeat;
 }
 
+
+.ie9 body.home > header {
+	background: #191919 url($transparentNoiseImageData);
+  background-image:
+    url('../images/diagonals-top.png'),
+	  url('../images/mts.png'), 
+	  url('../images/stars.png'),
+	  url($transparentNoiseImageData);
+  background-repeat:
+  	no-repeat,
+  	no-repeat,
+    repeat,
+    repeat;
+  background-position:
+  	right bottom,
+	  center bottom,
+	  center bottom, 
+	  center bottom;
+  }
+
+
 .messaging {
   margin: 55px 0;
   
@@ -799,6 +820,8 @@ body.home {
 	    center bottom;
 		}
 }
+
+
 
 .home .learn li img {
 	float:left;
