--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -13,10 +13,14 @@
       - if @user.promo_code.nil?
         .control-group
           .controls
-            =link_to 'Have a promo code to enter?', new_account_path(:web_user => {:promo_code => ' '}), :style => 'font-size: 14px;'
+            =link_to 'Have a promo code to enter?', 
+              new_account_path(:web_user => {:promo_code => ' '}),
+              :style => 'font-size: 14px;', 
+              :title => "Don't worry if you don't have one - I never got one either"
       - else
         = form.input :promo_code, :label => 'Promotional Code', :required => false, :input_html => { :class => 'input-xlarge' }
 
+    = form.inputs do
       = input_recaptcha(:errors => @user.errors[:captcha])
 
       .control-group
