Center the signup terms to balance the page

--- a/site/app/views/user/new.html.haml
+++ b/site/app/views/user/new.html.haml
@@ -23,7 +23,7 @@
     = form.inputs do
       = input_recaptcha(:errors => @user.errors[:captcha])
 
-      .control-group
+      .control-group.center
         By signing up you agree to the 
         = link_to 'Terms of Service', legal_site_terms_path
         and the
