Update preview agreement to remove flex

--- a/site/app/views/legal/services_agreement.html.haml
+++ b/site/app/views/legal/services_agreement.html.haml
@@ -205,7 +205,7 @@
     %li#term
       %strong
         Term and Termination.  
-      The Preview Services will commence on the Effective Date.  Red Hat may discontinue the Preview Program at any time.  Without limiting other rights that Red Hat may have, Red Hat may suspend or terminate Your Preview Services and Your Account immediately if You have breached this Agreement, the Acceptable Use Policy or applicable law.  You may terminate Your Account at any time by notifying Red Hat.  Following termination or expiration of this Agreement, You will no longer be able to access or use the Preview Services, any Preview Software, or any of Content stored in connection with the Preview Services.  If this Agreement expires or is terminated for any reason, the following sections will survive such termination or expiration: Sections 3.3, 4.3, 7 and 11-20 and any post-termination requirements set forth in Appendix A.  
+      The Preview Services will commence on the Effective Date.  Red Hat may discontinue the Preview Program at any time.  Without limiting other rights that Red Hat may have, Red Hat may suspend or terminate Your Preview Services and Your Account immediately if You have breached this Agreement, the Acceptable Use Policy or applicable law.  You may terminate Your Account at any time by notifying Red Hat.  Following termination or expiration of this Agreement, You will no longer be able to access or use the Preview Services, or any of Content stored in connection with the Preview Services.  If this Agreement expires or is terminated for any reason, the following sections will survive such termination or expiration: Sections 3.3, 4.3, 7 and 11-20 and any post-termination requirements set forth in Appendix A.  
 
     / Section 16
     %li#jurisdiction
@@ -239,16 +239,16 @@
 
   %h3#appendix_a APPENDIX A
   %h4 
-    PREVIEW SERVICES PROGRAMS 
+    PREVIEW SERVICES PROGRAM
     %br
-    OPENSHIFT EXPRESS AND OPENSHIFT FLEX
+    OPENSHIFT
   
   %ol
     / Section 1
     %li#purpose
       %strong
         Purpose.  
-      This Appendix A is attached to and is incorporated into the Red Hat Preview Services Agreement (the “<strong>Agreement</strong>”) and sets forth additional terms with respect to the following Red Hat Preview Services (each a “<strong>Preview Program</strong>”): (1) OpenShift Express and (2) OpenShift Flex.  When a capitalized term is used in this Appendix without a definition, the term has the meaning defined in the Agreement.   
+      This Appendix A is attached to and is incorporated into the Red Hat Preview Services Agreement (the “<strong>Agreement</strong>”) and sets forth additional terms with respect to the following Red Hat Preview Services (a “<strong>Preview Program</strong>”).  When a capitalized term is used in this Appendix without a definition, the term has the meaning defined in the Agreement.   
   
     / Section 2
     %li#domain_names
@@ -260,7 +260,7 @@
     %li#tech_support
       %strong
         Technical Support.  
-      The Preview Programs are under development and provided for Your evaluation and preview.  Red Hat does not provide any technical support in connection with your use of the Preview Services and/or any associated Preview Software.  While the Preview Program website may allow You to submit questions or report bugs, You should have no expectation that questions will be answered or that problems will be resolved. 
+      The Preview Program is under development and provided for Your evaluation and preview.  Red Hat does not provide any technical support in connection with your use of the Preview Services and/or any associated Preview Software.  While the Preview Program website may allow You to submit questions or report bugs, You should have no expectation that questions will be answered or that problems will be resolved. 
     
     / Section 4
     %li#fee
@@ -269,70 +269,16 @@
       There is currently no Fee to use or access the Preview Services.  Red Hat reserves the right to charge a fee for similar services in the future.
     
     / Section 5
-    %li#express
-      %strong OpenShift Express
-      
-      %ul
-        %li
-          .section-number
-            5.1.
-          %strong
-            Use Restrictions.  
-          Your use of the OpenShift Express Preview Services will be limited to a certain amount of compute capacity (including memory, storage, bandwidth etc).  Red Hat may in its sole discretion increase or decrease such capacity from time to time. 
+    %li#restrictions
+      %strong 
+        Use Restrictions
+      Your use of the Preview Service will be limited to a certain amount of compute capacity (including memory, storage, bandwidth etc).  Red Hat may in its sole discretion increase or decrease such capacity from time to time. 
 
-        %li
-          .section-number
-            5.2.
-          %strong
-            License.  
-          As part of the OpenShift Express Program, You may receive certain software (“OpenShift Express Preview Software”) to facilitate uploading and managing Content.  The licensing terms applicable to the OpenShift Express Preview Software are located in the OpenShift Express Preview Software You receive.
-    
     / Section 6
-    %li#flex
-      %strong OpenShift Flex
-      
-      %ul
-        %li
-          .section-number
-            6.1.
-          %strong
-            Third Party Service Provider.  
-          You are solely responsible and liable for:  (a) procuring services from a third party service provider acceptable to Red Hat (the “<strong>Service Provider</strong>”) to host Your use of the OpenShift Flex Preview Services; (b) maintaining an account with the Service Provider; and (c) complying with the terms and conditions of the Services Provider.  You may be required to pay the Service Provider even if You are not using the OpenShift Flex Preview Services.  By utilizing the OpenShift Flex Preview Services management functionality, Your utilization of compute capacity with the Service Provider may increase.  Red Hat is not responsible or liable for: (a) the actions of the Service Provider, (b) any additional obligations, conditions or warranties imposed or provided by the Service Provider; (c) any products and/or services that the Service Provider provides to You under agreements between You and the Service Provider; (d) any breaches by You of the terms and conditions of the Service Provider;  (e) backing up any Content used or created in connection with the Preview Subscription Services; or (f) fees incurred or owed by You to the Service Provider as a result of your use of the Service Provider’s service in connection with the OpenShift Flex Preview Services.  If you cannot comply with both the terms of this Agreement and Your agreement with the Service Provider, you may not use the OpenShift Flex Preview Services.
+    %li#license
+      %strong 
+        License
+      As part of the Preview Program, You may receive certain software (“Preview Software”) to facilitate uploading and managing Content.  The licensing terms applicable to the Preview Software are located in the Preview Software You receive.
 
-        %li
-          .section-number
-            6.2.
-          %strong
-            Service Provider Account Access.  
-          In order to receive the Preview Services, You may be required to provide Red Hat with access to Your information, accounts, systems, and software associated with you Service Provider account (“Your Information”), and resources such as network access as reasonably required by Red Hat in order to provide the Preview Services and in some cases You may not receive a separate notice when we connect to Your Information or access Your Account. You understand and agree that (a) the completeness, accuracy of, and extent of access to, any of Your Information provided to Red Hat may affect Red Hat’s ability to provide the Preview Services, and (b) if reasonable access to Your Information is not provided, Red Hat will not be able to provide the Preview Services. You will obtain the consent of the Service Provider and any other third party necessary to grant Red Hat access to Your Information in order to provide the Preview Services. 
-
-        %li
-          .section-number
-            6.3.
-          %strong
-            License.  
-          In connection with the OpenShift Flex Preview Services, You will be permitted to run certain Preview Software in Your Service Provider account.  The Preview Software is owned by Red Hat or its licensors and protected under copyright law and under other laws as applicable. Title to the Preview Software and any component or to any copy, modification, or merged portion shall remain with Red Hat and other licensors, subject to the applicable license.  Red Hat grants to You a non-transferable, non-exclusive, limited, revocable license to use the Preview Software during the term of the Agreement and exclusively for Your use with the Preview Services in connection with Your Service Provider account, as contemplated under this Agreement.  You only acquire the right to use the Preview Software and do not acquire any rights of ownership in the Preview Software.  You shall not (i) sublicense, sell, rent, distribute, assign or otherwise transfer the Preview Software; (ii) reverse engineer, decompile or disassemble the Preview Software except to the extent such conduct is permitted under applicable law notwithstanding this restriction; (iii) remove or modify any of the copyright, trademark or other proprietary notices contained in the Preview Software or documentation; (iv) use the Preview Software or any of the Preview Services to provide service bureau, hosting or similar services to any third parties(v) modify or create derivative works of the Preview Software or any of the Preview Services, or (vi) use the Preview Services to create products or services that compete with any of the Preview Services, including the Preview Software. Your license to use the Preview Software is subject to the condition that You use the Preview Software while connected with the Preview Services.  Red Hat reserves all rights to the Preview Software not expressly granted herein.  This license is conditioned on Your use of the Preview Services and Preview Software in compliance with this Section and not for use by or for a third party.  
-
-        %li
-          .section-number
-            6.4.
-          %strong
-            Third-Party Software. 
-          The Preview Software may include or involve use of software components originally released under an open source license or a third-party license ("<strong>Third-Party License</strong>").  To the extent that a Third-Party License applicable to such a component would be expressly in conflict with the licensing terms for the Preview Software specified in the preceding paragraph ("<strong>Preview Software License</strong>"), such Third-Party License shall govern Your use of such component. In all other cases, the Preview Software License controls Your use of the Preview Software and any of its components. Moreover, nothing in this Section alters the restrictions on Your use of the Preview Services specified in this Agreement, regardless of whether the Preview Software License or a Third-Party License governs an individual component.
-
-        %li
-          .section-number
-            6.5.
-          %strong
-            Breach.  
-          Any unauthorized use of the Preview Software or Preview Services is a material breach of the Agreement. 
-
-        %li#termination
-          .section-number
-            6.6.
-          %strong
-            Termination.  
-          Following termination or expiration of this Agreement, You will no longer be able to obtain access to or use the Preview Services and You must remove the OpenShift Flex Preview Software from Your Service Provider account (except that nothing in this Section is intended to interfere with Your rights under any Third Party Licenses).
-   
     %p.last-updated
-      Last Updated April 28, 2011
+      Last Updated April 12, 2012
