--- a/site/app/views/layouts/console.html.haml
+++ b/site/app/views/layouts/console.html.haml
@@ -22,7 +22,7 @@
         = yield
 
     %footer
-      = render 'layouts/console/footer'
+      = render 'layouts/footer'
 
     = render 'layouts/javascripts'
 
