--- a/site/app/views/layouts/site.html.haml
+++ b/site/app/views/layouts/site.html.haml
@@ -41,7 +41,7 @@
                     = yield
 
     %footer
-      = render 'layouts/site/footer'
+      = render 'layouts/footer'
 
     = render 'layouts/site/javascripts'
 
