Link the redhat image to https://www.redhat.com/

--- a/site/app/views/layouts/_footer.html.haml
+++ b/site/app/views/layouts/_footer.html.haml
@@ -38,5 +38,6 @@
 
 %section#copyright
   .container
-    %img{ :src => "/app/images/redhat.png", :alt => "Red Hat" }
+    %a{:href => 'https://www.redhat.com/'}
+      %img{ :src => "/app/images/redhat.png", :alt => "Red Hat" }
     .pull-right Copyright &copy; 2011 Red Hat, Inc.
